<resources>
    <string name="app_name">Gym Buddy</string>
    <string name="search_posts">Search Posts</string>
    <string name="sort_posts">Sort Posts</string>
    <string name="settings">Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="view_posts_button">View Posts</string>
    <string name="create_new_post_button">Create New Post</string>
    <string name="nick_name">Nick Name</string>
    <string name="picture_section">Picture</string>
    <string name="submit_button">Submit</string>
    <string name="login_text">Login</string>
    <string name="create_post">Create</string>
    <string name="comments">Comments (optional):</string>
    <string name="num_people"># of People:</string>
    <string name="activity_new_post">Activity:</string>
    <string name="location_new_post">Location:</string>
    <string name="set">Set</string>
    <string name="meeting_time_new_post">Meeting Date:</string>
    <string name="create_new_post">Create New Post</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="meeting_time">Meeting Time:</string>
    <string name="meeting_date">Meeting Date:</string>
</resources>
