<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_create_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/dark_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/create_new_post"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="28sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/meeting_time_new_post"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/set_meeting_date_button"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:text="@string/set_date"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/meeting_time"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/set_meeting_time_button"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:background="@color/white"
                android:text="@string/set_time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/location_new_post"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <Spinner
                android:id="@+id/location_choice_spinner"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/activity_new_post"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/activity_choice_spinner"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/num_people"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/number_people_spinner"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:spinnerMode="dropdown"
                android:background="@color/white"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/comments"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/comment_box_new_post"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30sp"
            android:background="@color/white"
            android:inputType="text"
            android:layout_marginTop="0dp"
            android:maxLength="100"
            android:gravity="top|start"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/brighter_green">

            <Button
                android:id="@+id/submit_new_post_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/create_post"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>

