<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_setting"
        android:id="@+id/profile_settings_button"
        android:textSize="50sp"
        android:textColor="@color/brighter_green"
        android:textStyle="bold"
        android:layout_gravity="center|top"
        android:layout_marginTop="35dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/brighter_green"
        android:hint="@string/nick_name"
        android:textColorHint="@color/brighter_green"
        android:ems="10"
        android:id="@+id/nick_name"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"/>

    <Spinner
        android:id="@+id/campus_choice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_section"
        android:id="@+id/picture_section"
        android:textSize="20sp"
        android:textColor="@color/brighter_green"
        android:layout_marginTop="15dp"/>

    <ImageView
        android:id="@+id/profile_pic_from_file"
        android:layout_width="107dp"
        android:layout_height="78dp"
        android:scaleType="centerInside"
        android:layout_marginLeft="138dp"
        android:layout_marginStart="138dp"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"
        android:layout_marginTop="35dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:id="@+id/profile_pic_from_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="138dp"
            android:layout_marginStart="138dp"/>

        <ImageButton
            android:id="@+id/browse_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_add"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/profile_pic_from_camera"
            android:layout_toEndOf="@+id/profile_pic_from_camera"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submit_button"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
